--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 09:55:01 AM JST 2026
+Fri Jan 16 10:10:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Nearoute Limited (Tokyo) [0.91 km]: 38.496 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 35.86 ms
 Testing download speed................................................................................
-Download: 143.00 Mbit/s
+Download: 41.55 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 32.42 Mbit/s
+Upload: 33.17 Mbit/s
