--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 10:15:01 AM JST 2026
+Fri Jan 16 10:20:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 33.339 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 31.3 ms
 Testing download speed................................................................................
-Download: 32.71 Mbit/s
-Testing upload speed.....................................................................................................
-.Upload: 36.44 Mbit/s
+Download: 34.49 Mbit/s
+Testing upload speed......................................................................................................
+Upload: 30.15 Mbit/s
