--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 10:20:01 AM JST 2026
+Fri Jan 16 10:25:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 31.3 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 45.367 ms
 Testing download speed................................................................................
-Download: 34.49 Mbit/s
+Download: 116.15 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.15 Mbit/s
+Upload: 23.74 Mbit/s
