--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 10:50:01 AM JST 2026
+Fri Jan 16 10:55:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Kairun Services (Chiba) [38.77 km]: 38.242 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 40.181 ms
 Testing download speed................................................................................
-Download: 87.54 Mbit/s
+Download: 63.32 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.78 Mbit/s
+Upload: 27.35 Mbit/s
