--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 11:55:01 AM JST 2026
+Fri Jan 16 12:10:01 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 35.45 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 38.675 ms
 Testing download speed................................................................................
-Download: 54.53 Mbit/s
+Download: 58.04 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 27.28 Mbit/s
+Upload: 13.65 Mbit/s
