--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 01:40:01 PM JST 2026
+Fri Jan 16 01:45:01 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 46.374 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 40.448 ms
 Testing download speed................................................................................
-Download: 173.84 Mbit/s
+Download: 51.51 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.96 Mbit/s
+Upload: 32.01 Mbit/s
