--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Fri Jan 16 10:20:01 PM JST 2026
+Fri Jan 16 10:25:01 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 35.056 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 34.284 ms
 Testing download speed................................................................................
-Download: 90.17 Mbit/s
+Download: 86.58 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 37.55 Mbit/s
+Upload: 36.42 Mbit/s
