--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 10:35:01 PM JST 2026
+Fri Jan 16 10:40:01 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 33.631 ms
+Hosted by SpaceCore.pro | Premium VPS Hosting (Tokyo) [0.91 km]: 38.174 ms
 Testing download speed................................................................................
-Download: 70.43 Mbit/s
+Download: 6.32 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 33.36 Mbit/s
+Upload: 11.98 Mbit/s
