--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 10:50:01 PM JST 2026
+Fri Jan 16 10:55:01 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 33.308 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 37.857 ms
 Testing download speed................................................................................
-Download: 47.70 Mbit/s
+Download: 85.57 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 34.13 Mbit/s
+Upload: 35.36 Mbit/s
