--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sat Jan 17 12:10:01 AM JST 2026
+Sat Jan 17 12:15:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 39.937 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 38.521 ms
 Testing download speed................................................................................
-Download: 97.60 Mbit/s
+Download: 69.85 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.89 Mbit/s
+Upload: 4.85 Mbit/s
