--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sat Jan 17 12:45:01 AM JST 2026
+Sat Jan 17 12:50:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Kairun Services (Chiba) [38.77 km]: 38.888 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 33.172 ms
 Testing download speed................................................................................
-Download: 87.00 Mbit/s
+Download: 101.41 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 35.27 Mbit/s
+Upload: 31.36 Mbit/s
